templates/network/nw-po/ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring # Must be in the same namespace as Grafana
spec:
  type: ExternalName
  externalName: prometheus-stack-kube-prom-prometheus.monitoring.svc.cluster.local
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
