templates/network/nw-po/ext-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-ingress-to-frontend
  namespace: md
spec:
  podSelector:
    matchLabels: 
      app: frontend 
  policyTypes: 
  - Ingress 
  ingress: 
  - ports:
     - port: 80

---
#dns egresss to check dns names 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: md
spec:
  podSelector: { }
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
---
#allow probes to check health
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kubelet-probes
  namespace: md
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.49.0/24
